2010-09-22  Balazs Kelemen  <kb@inf.u-szeged.hu>

        Reviewed by Darin Adler.

        check-webkit-style and the coding style guidelines page are inconsistent
        https://bugs.webkit.org/show_bug.cgi?id=46099

        * coding/coding-style.html:
        Making clear that includes of system headers must come after includes of other headers.

2010-09-16  Tony Gentilcore  <tonyg@chromium.org>

        Reviewed by Adam Barth.

        Adding a timeline screenshot for blocking and defer scripts
        https://bugs.webkit.org/show_bug.cgi?id=45933

        * blog-files/timeline-blocking-script.png: Added.
        * blog-files/timeline-defer-script.png: Added.

2010-09-14  Jessie Berlin  <jberlin@apple.com>

        Reviewed by Adam Roben.

        Exceptions are getting ignored on 64-bit Windows in the Web Process.
        https://bugs.webkit.org/show_bug.cgi?id=45779

        * building/tools.html:
        Add instructions about how to optionally get hotfix 976038.

2010-09-06  Robin Qiu  <robin.qiu@torchmobile.com.cn>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=43982
        This js file seems to be a popular script for detecting mobile WebKit but
        it has a flaw that makes it fail on Android and BlackBerry.  

        The issue is that it looks for "Mobile/" but Android and BlackBerry
        use "Mobile" with no numbering after it.
        Changed RegExp pattern " Mobile/" to " Mobile\\b".

        * misc/WebKitDetect.js:
        (WebKitDetect.isMobile):

2010-08-27  Darin Adler  <darin@apple.com>

        * coding/RefPtr.html: Minor revision, improve clarity and mention some
        recent developments.

2010-08-26  Daniel Bates  <dbates@rim.com>

        Reviewed by Dumitru Daniliuc.

        Fix misspelled words on WebKit.org contact.html,
        demos/index.html, and quality/leakhunting.html
        https://bugs.webkit.org/show_bug.cgi?id=44747

        Fix some misspelled words on the WebKit.org site.
