@@ -765,9 +765,9 @@ Don't bother to organize them in a logical order.
 #include "ProcessLauncher.h"
 #include "WebPageProxyMessageKinds.h"
 #include "WorkItem.h"
-#include &ltQApplication&gt
-#include &ltQLocalServer&gt
-#include &ltQLocalSocket&gt
+#include &lt;QApplication&gt;
+#include &lt;QLocalServer&gt;
+#include &lt;QLocalSocket&gt;
 </pre>
 
 <h4 class="wrong">Wrong:</h4>
@@ -775,9 +775,9 @@ Don't bother to organize them in a logical order.
 // ConnectionQt.cpp
 #include "ArgumentEncoder.h"
 #include "ProcessLauncher.h"
-#include &ltQApplication&gt
-#include &ltQLocalServer&gt
-#include &ltQLocalSocket&gt
+#include &lt;QApplication&gt;
+#include &lt;QLocalServer&gt;
+#include &lt;QLocalSocket&gt;
 #include "WebPageProxyMessageKinds.h"
 #include "WorkItem.h"
 </pre>
